Add page for publications

--- a/server/package.json
+++ b/server/package.json
@@ -1,19 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "dependencies": {
+    "express": "^4.21.1"
+  },
   "devDependencies": {
-    "@types/nodemon": "^1.19.6",
-    "nodemon": "^3.1.7"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.17.6",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
