--- a/client/package.json
+++ b/client/package.json
@@ -1,29 +1,27 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
+    "lucide-react": "^0.294.0",
+    "next": "^15.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "recharts": "^2.13.3"
+  },
+  "devDependencies": {
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@types/recharts": "^1.8.29",
     "autoprefixer": "^10.4.20",
-    "lucide-react": "^0.454.0",
-    "next": "^15.0.2",
     "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^2.13.3",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
