--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "lucide-react": "^0.294.0",
-    "next": "^15.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "^14.2.17",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "recharts": "^2.13.3"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
