--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
     "dev:client": "npm run dev -w client",
     "dev:server": "npm run dev -w server",
     "build": "npm run build -w client && npm run build -w server",
-    "test": "npm run test -w client && npm run test -w server"
+    "test": "npm run test -w client && npm run test -w server",
+    "seed": "ts-node prisma/seed.ts"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
     "concurrently": "^8.2.0",
-    "typescript": "^5.0.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "pg": "^8.13.1",
+    "prisma": "^5.22.0"
+  },
+  "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
   }
 }
