--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@tailwindcss/forms": "^0.5.9",
     "lucide-react": "^0.294.0",
     "next": "^14.2.17",
