--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^22.9.0",
     "concurrently": "^8.2.0",
+    "csv-parse": "^5.5.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
@@ -27,6 +28,6 @@
     "prisma": "^5.22.0"
   },
   "prisma": {
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts"
   }
 }
