--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "next": "^15.0.4-canary.19",
     "pg": "^8.13.1",
     "prisma": "^5.22.0"
   },
