--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@tailwindcss/forms": "^0.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.17",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "20.11.0",
