--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.8",
+    "express": "^4.21.1",
+    "fast-xml-parser": "^4.5.0",
     "next": "^15.0.4-canary.19",
     "pg": "^8.13.1",
     "prisma": "^5.22.0"
