--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.9",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "^14.2.17",
