--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/forms": "^0.5.9",
     "class-variance-authority": "^0.7.1",
