--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "setup-python": "node scripts/setup-python.js",
+    "postinstall": "npm run setup-python"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
