--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@types/d3": "^7.4.3",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
     "express": "^4.21.1",
     "fast-xml-parser": "^4.5.0",
     "lucide-react": "^0.294.0",
