--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/d3": "^7.4.3",
     "axios": "^1.7.8",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
@@ -26,12 +28,18 @@
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "recharts": "^2.13.3",
+    "shadcn": "^2.4.0-canary.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/helper-create-class-features-plugin": "^7.26.9",
+    "@babel/plugin-transform-typescript": "^7.26.8",
+    "@babel/traverse": "^7.26.9",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^22.9.0",
     "@types/react": "18.2.0",
