--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@osdk/client": "^2.1.0",
+    "@osdk/oauth": "^1.1.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.2",
+    "@scholars-website/sdk": "^0.1.0",
     "@shadcn/ui": "^0.0.4",
     "@types/d3": "^7.4.3",
     "axios": "^1.7.8",
