--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fast-xml-parser": "^4.5.0",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
+    "papaparse": "^5.5.2",
     "pg": "^8.13.1",
     "prisma": "^5.22.0",
     "react": "18.2.0",
@@ -46,6 +47,7 @@
     "@babel/traverse": "^7.26.9",
     "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^22.9.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
     "autoprefixer": "^10.4.20",
